@@ -7,6 +7,7 @@ New features:
 - Add responsive options to main layouts and overviews
 
 Fixes and improvements:
+- Mute rogue path output in manager for Redactor too
 - Remove http:// in Youtube embed placeholder URL
 - Update resourceTVInputOptions to respect possible context settings
 - Fix broken avatar image in compact article overviews
